force-app/main/default/objects/DM_StagingObject_Query_Generator__c/DM_StagingObject_Query_Generator__c.object-meta.xml
<CustomObject>
    <label>DM StagingObject Query Generator</label>
    <nameField>
        <label>DM StagingObject Query Generator Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DM StagingObject Query Generators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>