force-app/main/default/objects/DM_StagingObject_Query_Generator__c/fields/DM_isChild_of_Contract__c.field-meta.xml
<CustomField>
    <fullName>DM_isChild_of_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM isChild of Contract</label>
    <type>Checkbox</type>
</CustomField>