force-app/main/default/objects/DM_StagingObject_Query_Generator__c/fields/DM_Parent_Object__c.field-meta.xml
<CustomField>
    <fullName>DM_Parent_Object__c</fullName>
    <label>DM Parent Object</label>
    <length>60</length>
    <type>Text</type>
</CustomField>