force-app/main/default/objects/DM_StagingObject_Query_Generator__c/fields/DM_Query_Fields__c.field-meta.xml
<CustomField>
    <fullName>DM_Query_Fields__c</fullName>
    <label>DM Query Fields</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>